syntax = "proto3";

package auth;

option java_package = "com.salt.auth";
option java_outer_classname = "AuthProto";

service AuthService {
    rpc RegisterUser(UserRequest) returns (UserResponse);
}

message UserRequest {
    string username = 1;
    string password = 2;
}

message UserResponse {
    string message = 1;
}
